# base64_cpp

./: .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  README.md
include/: base64.h  base64_common.h  base64_specs.h
src/: base64.cc  base64.h  base64_common.h  base64_conv.cpp  base64_conv.h  base64_specs.cc
test/: test.cc  test.cpp
